--- a/eazyinvoice/api/templates/base.html
+++ b/eazyinvoice/api/templates/base.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -75,6 +75,7 @@
             <div class="mb-lg" style="display:flex; justify-content:space-between;">
                 <span style="font-weight:bold; font-size: 2.5rem;">
                     EAZY INVOICE
+                    <img src="{% static 'eazye.jpg' %}" height="44px">
                 </span>
                 <span>
                     {% if user.is_superuser %}
