--- a/eazyinvoice/api/templates/invoice.css
+++ b/eazyinvoice/api/templates/invoice.css
@@ -17,14 +17,14 @@ body, table {
 }
 
 .total-row {
-    border-top: 3px solid teal;
-    border-bottom: 3px solid teal;
+    border-top: 3px solid rgb(219, 219, 219);;
+    border-bottom: 3px solid rgb(219, 219, 219);;
 }
 
 th {
     text-align: left;
-    background-color: black;
-    color: white;
+    background-color: rgb(219, 219, 219);
+    color: rgb(0, 0, 0);
     padding-right: 30px;
     padding-left: 5px;
     padding-top: 5px;
@@ -33,7 +33,7 @@ th {
 
 td {
     text-align: left;
-    border-bottom: 1px solid teal;
+    border-bottom: 1px solid rgb(219, 219, 219);;
     padding-right: 20px;
 }
 
@@ -44,5 +44,5 @@ table {
 
 .highlight {
     font-weight: bold;
-    background-color: yellow;
+    background-color: rgb(219, 219, 219);
 }
