--- a/eazyinvoice/api/templates/invoice.css
+++ b/eazyinvoice/api/templates/invoice.css
@@ -17,8 +17,8 @@ body, table {
 }
 
 .total-row {
-    border-top: 3px solid rgb(219, 219, 219);;
-    border-bottom: 3px solid rgb(219, 219, 219);;
+    border-top: 3px solid rgb(219, 219, 219);
+    border-bottom: 3px solid rgb(219, 219, 219);
 }
 
 th {
@@ -33,7 +33,7 @@ th {
 
 td {
     text-align: left;
-    border-bottom: 1px solid rgb(219, 219, 219);;
+    border-bottom: 1px solid rgb(219, 219, 219);
     padding-right: 20px;
 }
 
