--- a/eazyinvoice/api/templates/orgs.html
+++ b/eazyinvoice/api/templates/orgs.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block 'body' %}
     <div>
+        <h4><a href="{% url 'page-query' %}">Run Query</a></h4>
+    </div>
+    <div>
         <h4>Organizations</h4>
     </div>
     <div>
