--- a/eazyinvoice/icit/templates/dummy_puncher.html
+++ b/eazyinvoice/icit/templates/dummy_puncher.html
@@ -13,7 +13,7 @@
     <h2>Dummy Machine Messages</h2>
     {% for message in messages %}
         <div style="background-color:#dbdbdb; margin:0.5rem; padding:0.5rem;">
-            {{ message.created_at|localtime }}
+            {{ message.created_at|timezone:"America/New_York" }}
             <hr>
             {{ message.message }}
         </div>
